# dich-truyen-agent

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  main.py  opencode.json  pyproject.toml  skills-lock.json
.agent/: gsd-file-manifest.json  gsd-install-state.json  settings.json
.agent/agents/: ag_coordinator.md  ag_metadata_translator.md  ag_translator.md  coordinator.md  translator.md
.agent/hooks/: gsd-check-update-worker.js  gsd-check-update.js  gsd-context-monitor.js  gsd-graphify-update.sh  gsd-prompt-guard.js  gsd-read-injection-scanner.js  gsd-statusline.js  gsd-update-banner.js  (+2 more)
.agents/: hooks.json
.claude/: gsd-file-manifest.json  gsd-install-state.json  settings.json  settings.local.json
.codex/: config.toml  gsd-file-manifest.json  gsd-install-state.json  hooks.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
scratch/: verify_skills.py
tests/: conftest.py  test_ag_md_references.py  test_browser.py  test_browser_strategies.py  test_checkpoints.py  test_cli.py  test_cowork_guide_panel.py  test_crawl_batch.py  test_crawl_profiles.py  test_crawl_reports.py  test_crawler.py  test_export.py  test_glossary.py  test_harness_adapter_discovery.py  test_harness_generator_check.py  test_harness_source_contract.py  test_hooks.py  test_main_guides_generated.py  test_models.py  test_oc_skills_discoverable.py  test_oc_translator_frontmatter.py  test_opencode_json_valid.py  test_qa.py  test_storage.py  test_styles.py  test_translation.py  test_workspace.py
tools/: sync_harness_adapters.py
(+520 files in other folders)
