[project]
name = "dich-truyen-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13,<3",
    "pyyaml>=6.0,<7",
]

[dependency-groups]
dev = [
    "pytest>=9,<10",
    "ruff>=0.15,<1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
