[project]
name = "dich-truyen-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14,<5",
    "chardet>=7.4,<8",
    "httpx>=0.28,<1",
    "lxml>=6.1,<7",
    "pydantic>=2.13,<3",
    "pydantic-settings>=2.14,<3",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.60,<2",
]

[dependency-groups]
dev = [
    "pytest>=9,<10",
    "pytest-asyncio>=1.4,<2",
    "ruff>=0.15,<1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
